
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp">

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="16dp"
        android:text="" />

    <Button
        android:id="@+id/buttonSaudacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mostrar Saudação" />

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Limpar Texto" />
</LinearLayout>
